# basalt

./: .gitignore  Cargo.toml  compile.sh  flake.nix
basalt/: Cargo.toml  a.spv  compile.sh
basalt/shaders/: egui.vert  egui.vert.spv  mesh.vert  mesh.vert.spv  rgb_triangle.frag  rgb_triangle.vert  rgb_triangle.vert.spv  types.glsl
basalt/src/: buffer.rs  descriptor_sets.rs  frame.rs  gui.rs  handles.rs  image.rs  lib.rs  main.rs  mesh.rs  shader_types.rs  utils.rs
gui/: Cargo.toml
gui/src/: egui.frag  egui.frag.spv  egui.vert.spv  lib.rs
materials/: Cargo.toml
materials/src/: lib.rs
reflection/: Cargo.toml
reflection/src/: lib.rs  main.rs
shaders/: Cargo.toml  color.vert  common.glsl  cull.comp  egui.frag  egui.vert  line.frag  line.vert  mesh.frag  mesh.vert  rgb_triangle.frag  rgb_triangle.vert  shader_types.rs  test.comp
src/: buffer.rs  descriptor_sets.rs  frame.rs  gui.rs  handles.rs  holes.rs  image.rs  input.rs  main.rs  mesh.rs  utils.rs
testing/: Cargo.toml  compile.sh
testing/shaders/: defaultSet.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  rgb_triangle.frag.spv  rgb_triangle.vert.spv
testing/src/: camera.rs  input.rs  main.rs
