[package]
name = "basalt"
version = "0.1.0"
edition = "2021"

[dependencies]
erupt = "0.23.0"
cgmath = "0.18.0"
tobj = "4.0"
structopt = "0.3"
first-person-camera = { git = "https://github.com/Blugatroff/first-person-camera.git" }
image = "0.24.6"
reflection = { path = "../reflection" }
log = "0.4"
pretty_env_logger = "0.4"
colored = "2"
shaders = { path = "../shaders/" }
slab = "0.4.8"
puffin = "0.13.0"
vk-mem-3-erupt = "0.6.0"

[dependencies.sdl2]
git = "https://github.com/Rust-SDL2/rust-sdl2"
rev = "27cd1fd67c811e06b9d997a77bb6089a1b65070d"
features = ["raw-window-handle"]
