[package]
name = "basalt"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = { workspace = true }
tobj = "4.0"
structopt = "0.3"
first-person-camera = { git = "https://github.com/Blugatroff/first-person-camera.git" }
image = "0.24.6"
reflection = { path = "../reflection" }
log = "0.4"
pretty_env_logger = "0.4"
colored = "2"
shaders = { path = "../shaders/" }
slab = "0.4.8"
puffin = "0.16.0"
ash = "0.37.3"
cstr = "0.2.11"
ash-window = "0.12.0"
raw-window-handle = "0.5.2"
vma = "0.3.1"
bytemuck = { workspace = true }
sdl2 = { workspace = true }

