[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
basalt = { path = "../basalt/" }
shaders = { path = "../shaders" }
cgmath = { workspace = true }
bytemuck = { workspace = true }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", rev = "27cd1fd67c811e06b9d997a77bb6089a1b65070d" }
egui = { version = "0.22.0", features = ["bytemuck"] }
slab = "0.4"
log = "0.4"

