[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
basalt = { path = "../basalt/" }
shaders = { path = "../shaders" }
cgmath = { workspace = true }
bytemuck = { workspace = true }
sdl2 = { workspace = true }
egui = { version = "0.22.0", features = ["bytemuck"] }
slab = "0.4"
log = "0.4"

