[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "*"
basalt = { path = "../basalt/" }
first-person-camera = { git = "https://github.com/Blugatroff/first-person-camera.git" }
gui = { path = "../gui" }
egui = "*"
log = "0.4"
pretty_env_logger = "0.4"

[dependencies.sdl2]
version = "0.35.1"
features = ["raw-window-handle"]
