[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
basalt = { path = "../basalt/" }
first-person-camera = { git = "https://github.com/Blugatroff/first-person-camera.git" }
gui = { path = "../gui" }
log = "0.4"
pretty_env_logger = "0.4"
puffin_egui = "0.13.0"

[dependencies.sdl2]
git = "https://github.com/Rust-SDL2/rust-sdl2"
rev = "27cd1fd67c811e06b9d997a77bb6089a1b65070d"
features = ["raw-window-handle"]
